# rust-hermes-agent

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
crates/crate-hermes-agent/: Cargo.toml  README.md
crates/crate-hermes-agent/src/: main.rs
crates/hermes-acp/: Cargo.toml
crates/hermes-acp/src/: lib.rs
crates/hermes-auxiliary/: Cargo.toml
crates/hermes-auxiliary/src/: client_cache.rs  fallback.rs  lib.rs  resolver.rs
crates/hermes-auxiliary/src/adapters/: anthropic.rs  mod.rs  openai.rs
crates/hermes-auxiliary/tests/: test_auxiliary.rs
crates/hermes-backup/: Cargo.toml
crates/hermes-backup/src/: backup.rs  lib.rs  restore.rs  types.rs
crates/hermes-checkpoint/: Cargo.toml
crates/hermes-checkpoint/src/: lib.rs  manager.rs
crates/hermes-cli/: Cargo.toml  README.md
crates/hermes-cli/src/: background_tasks.rs  chat.rs  commands.rs  display.rs  lib.rs  main.rs  slash_commands.rs
crates/hermes-cli/src/handlers/: config.rs  gateway.rs  mod.rs  model.rs  session.rs  skills.rs  tools.rs
crates/hermes-cli/src/ui/: completer.rs  history.rs  line_reader.rs  mod.rs  multiline_editor.rs  streaming_output.rs  tui_app.rs
crates/hermes-core/: Cargo.toml
crates/hermes-core/src/: agent.rs  config.rs  context_compressor.rs  context_pressure_monitor.rs  conversation.rs  credential_pool.rs  credentials.rs  display.rs  error.rs  error_classifier.rs  gateway.rs  insights.rs  lib.rs  metadata_extractor.rs  nudge.rs  prompt_caching.rs  provider.rs  rate_limit_tracker.rs  retry.rs  retry_utils.rs  retrying_provider.rs  title_generator.rs  tool_dispatcher.rs  trajectory.rs  types.rs  usage_pricing.rs
crates/hermes-core/src/agent/: profile.rs  subagent.rs
crates/hermes-core/src/compression/: mod.rs  pruner.rs  summarizer.rs
crates/hermes-core/src/config/: auxiliary.rs  backend.rs  backend_daytona.rs  backend_docker.rs  backend_local.rs  backend_modal.rs  backend_singularity.rs  backend_ssh.rs  compression.rs  config_tests.rs  delegation.rs  display.rs  mcp.rs  mod.rs  personality.rs  profile.rs  provider.rs  provider_core.rs  provider_custom.rs  safety.rs  stt.rs
crates/hermes-core/src/delegate/: mod.rs  tests.rs  types.rs
crates/hermes-core/tests/: test_compression_routing.rs  test_context_pressure.rs  test_conversation_experience.rs  test_infrastructure.rs  test_insights.rs  test_metadata_extractor.rs
crates/hermes-cron/: Cargo.toml
crates/hermes-cron/src/: job.rs  lib.rs  natural_language.rs  scheduler.rs  watch.rs
crates/hermes-gateway/: Cargo.toml
crates/hermes-gateway/src/: error.rs  lib.rs  types.rs
crates/hermes-gateway/tests/: test_gateway_webhooks.rs
crates/hermes-mcp/: Cargo.toml
crates/hermes-mcp/src/: client.rs  lib.rs  protocol.rs  transport.rs
crates/hermes-memory/: Cargo.toml
crates/hermes-memory/src/: compressed.rs  compression.rs  compression_config.rs  compression_error.rs  lib.rs  memory_manager.rs  session.rs  sqlite_store.rs  summarizer.rs
crates/hermes-memory/tests/: test_store.rs
crates/hermes-platform-discord/: Cargo.toml
crates/hermes-platform-discord/src/: lib.rs
crates/hermes-platform-email/: Cargo.toml
crates/hermes-platform-email/src/: error.rs  imap.rs  lib.rs  parser.rs  smtp.rs  webhook.rs
crates/hermes-platform-email/tests/: test_email.rs
crates/hermes-platform-feishu/: Cargo.toml
crates/hermes-platform-feishu/src/: client.rs  error.rs  feishu.rs  lib.rs
crates/hermes-platform-feishu/tests/: test_feishu.rs
crates/hermes-platform-matrix/: Cargo.toml
crates/hermes-platform-matrix/src/: lib.rs
crates/hermes-platform-slack/: Cargo.toml
crates/hermes-platform-slack/src/: lib.rs
crates/hermes-platform-sms/: Cargo.toml
crates/hermes-platform-sms/src/: client.rs  error.rs  lib.rs  sms.rs
crates/hermes-platform-sms/tests/: test_sms.rs
crates/hermes-platform-teams/: Cargo.toml
crates/hermes-platform-teams/src/: lib.rs
crates/hermes-platform-telegram/: Cargo.toml
crates/hermes-platform-telegram/src/: lib.rs
crates/hermes-platform-telegram/tests/: test_telegram.rs
crates/hermes-platform-wecom/: Cargo.toml
crates/hermes-platform-wecom/src/: lib.rs
crates/hermes-platform-wecom/tests/: test_wecom.rs
crates/hermes-platform-weixin/: Cargo.toml
crates/hermes-platform-weixin/src/: client.rs  crypto.rs  error.rs  lib.rs  weixin.rs
crates/hermes-platform-weixin/tests/: test_weixin.rs
crates/hermes-provider/: Cargo.toml
crates/hermes-provider/src/: anthropic.rs  deepseek.rs  glm.rs  kimi.rs  lib.rs  minimax.rs  openai.rs  openrouter.rs  qwen.rs  router.rs  traits.rs
crates/hermes-skills/: Cargo.toml
crates/hermes-skills/src/: error.rs  executor.rs  fuzzy_patch.rs  hub_cli.rs  lib.rs  loader.rs  manager.rs  metadata.rs  registry.rs  security.rs  tools.rs
crates/hermes-skills/tests/: test_fuzzy_patch.rs  test_tools.rs
crates/hermes-tool-registry/: Cargo.toml
crates/hermes-tool-registry/src/: delegate_tool.rs  lib.rs  registry.rs
crates/hermes-tool-registry/tests/: test_registry.rs
crates/hermes-tools-builtin/: Cargo.toml
crates/hermes-tools-builtin/src/: approval_tools.rs  browser_tools.rs  clarify_tools.rs  file_tools.rs  lib.rs  patch_tools.rs  search_tools.rs  skills.rs  terminal_tools.rs  todo_tools.rs  web_tools.rs
crates/hermes-tools-builtin/tests/: test_approval.rs  test_browser.rs  test_clarify.rs  test_todo.rs
crates/hermes-tools-extended/: Cargo.toml
crates/hermes-tools-extended/src/: cli_executor.rs  code_execution.rs  cron_scheduler.rs  delegate_tool.rs  homeassistant.rs  image_generation.rs  lib.rs  mcp_client.rs  mcp_server.rs  memory.rs  mixture_of_agents.rs  rl_training.rs  security_scanner.rs  skills.rs  text_to_speech.rs  transcription.rs  url_safety.rs  vision.rs  web_fetch.rs  web_search.rs
crates/hermes-tools-extended/tests/: test_code_execution.rs  test_delegate.rs  test_homeassistant.rs  test_image_generation.rs  test_memory.rs  test_mixture_of_agents.rs  test_security_scanner.rs  test_skills.rs  test_text_to_speech.rs  test_transcription.rs  test_url_safety.rs  test_vision.rs  test_web_search.rs
docs/: UserGuide.md  (+1 more)
(+134 files in other folders)
