[workspace]
resolver = "2"
members = [
    "crates/crate-hermes-agent",
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Nous Research"]
repository = "https://github.com/NousResearch/rust-hermes-agent"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5"
dirs = "5.0"
rand = "0.8"
figment = { version = "0.10", features = ["env"] }
tempfile = "3"
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
hermes-cli = { path = "crates/hermes-cli" }
hermes-core = { path = "crates/hermes-core" }
hermes-tool-registry = { path = "crates/hermes-tool-registry" }
hermes-tools-builtin = { path = "crates/hermes-tools-builtin" }
hermes-memory = { path = "crates/hermes-memory" }
hermes-error = { path = "crates/hermes-error" }
hermes-skills = { path = "crates/hermes-skills" }
hermes-gateway = { path = "crates/hermes-gateway" }
hermes-platform-telegram = { path = "crates/hermes-platform-telegram" }
hermes-platform-wecom = { path = "crates/hermes-platform-wecom" }
hermes-platform-feishu = { path = "crates/hermes-platform-feishu" }
hermes-environment = { path = "crates/hermes-environment" }
hermes-provider = { path = "crates/hermes-provider" }
hermes-cron = { path = "crates/hermes-cron" }
serde-xml-rs = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
pkcs7 = "0.4"
hmac = "0.12"
sha1 = "0.10"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
scraper = "0.21"
cron = "0.15"
urlencoding = "2.1"
