[package]
name = "hermes-acp"
version = "0.1.0"
edition = "2021"
description = "Agent Copilot Protocol implementation for Hermes Agent"

[dependencies]
hermes-core = { path = "../hermes-core" }
hermes-memory = { path = "../hermes-memory" }
hermes-tool-registry = { path = "../hermes-tool-registry" }
hermes-provider = { path = "../hermes-provider" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
