[package]
name = "hermes-checkpoint"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
