[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
figment.workspace = true
anyhow.workspace = true
dirs.workspace = true
uuid.workspace = true
hermes-core.workspace = true
hermes-memory.workspace = true
hermes-tool-registry.workspace = true
hermes-tools-builtin.workspace = true
hermes-environment.workspace = true
hermes-provider = { path = "../hermes-provider" }
hermes-skills.workspace = true
hermes-gateway.workspace = true
axum.workspace = true
