[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
figment.workspace = true
anyhow.workspace = true
dirs.workspace = true
rustyline = "15"  # 行编辑和历史
chrono = "0.4"   # 时间戳
uuid.workspace = true
hermes-core.workspace = true
hermes-memory.workspace = true
hermes-tool-registry.workspace = true
hermes-tools-builtin.workspace = true
hermes-environment.workspace = true
hermes-provider = { path = "../hermes-provider" }
hermes-skills.workspace = true
hermes-gateway.workspace = true
hermes-checkpoint.workspace = true
parking_lot.workspace = true
axum.workspace = true
ratatui.workspace = true
crossterm.workspace = true
