[package]
name = "hermes-cron"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
