[package]
name = "hermes-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
hermes-core.workspace = true
hermes-memory.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true
