[package]
name = "hermes-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
hermes-core.workspace = true
hermes-memory.workspace = true
hermes-platform-telegram.workspace = true
hermes-platform-wecom.workspace = true
hermes-platform-dingtalk.workspace = true
hermes-platform-feishu.workspace = true
hermes-platform-weixin.workspace = true
hermes-platform-sms.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true
aes.workspace = true
base64.workspace = true
sha1.workspace = true
