[package]
name = "hermes-mcp"
version.workspace = true
edition = "2021"
description = "MCP (Model Context Protocol) client for rust-hermes-agent"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"