[package]
name = "hermes-platform-discord"
version.workspace = true
edition = "2021"
description = "Discord platform adapter for rust-hermes-agent"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hermes-core = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"