[package]
name = "hermes-platform-email"
version.workspace = true
edition = "2021"
description = "Email platform adapter for rust-hermes-agent (SMTP + IMAP + Webhook)"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
serde_urlencoded = { workspace = true }
async-imap = "0.10"
mail-parser = "0.4"
lettre = { version = "0.11", features = ["tokio1-native-tls", "tokio1", "smtp-transport", "builder"] }
native-tls = "0.2"
async-native-tls = "0.3"
hermes-core = { workspace = true }
hex = "0.4"
openssl = "0.10"
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
