[package]
name = "hermes-platform-feishu"
version.workspace = true
edition.workspace = true
description = "Feishu/Lark platform adapter for rust-hermes-agent"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
axum.workspace = true
hermes-core.workspace = true

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
