[package]
name = "hermes-platform-matrix"
version.workspace = true
edition = "2021"
description = "Matrix platform adapter for rust-hermes-agent"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hermes-core = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"