[package]
name = "hermes-platform-slack"
version.workspace = true
edition = "2021"
description = "Slack platform adapter for rust-hermes-agent"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hermes-core = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"