[package]
name = "hermes-platform-sms"
version.workspace = true
edition = "2021"
description = "SMS platform adapter for rust-hermes-agent (Twilio)"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
serde_urlencoded = { workspace = true }
hermes-core = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
