[package]
name = "hermes-platform-weixin"
version.workspace = true
edition.workspace = true
description = "WeChat platform adapter for rust-hermes-agent"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
url.workspace = true
chrono.workspace = true
axum.workspace = true
hermes-core.workspace = true
aes.workspace = true
base64.workspace = true
serde-xml-rs.workspace = true

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
