[package]
name = "hermes-provider"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-util = "0.3"
url.workspace = true
once_cell.workspace = true
hermes-core = { version = "0.1.0", path = "../hermes-core" }
