[package]
name = "hermes-skills"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
dirs.workspace = true
regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
sha2.workspace = true
chrono.workspace = true
walkdir = "2.5"
fuzzy-matcher = "0.3"
tempfile = "3"
clap = { version = "4.5", features = ["derive"] }
async-recursion = "1.0"

[dev-dependencies]
tempfile.workspace = true
