[package]
name = "hermes-tool-registry"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
hermes-core.workspace = true
