[package]
name = "hermes-tools-extended"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
hermes-core.workspace = true
hermes-memory.workspace = true
hermes-tool-registry.workspace = true
hermes-environment.workspace = true
scraper.workspace = true
regex.workspace = true
cron.workspace = true
urlencoding.workspace = true
base64 = "0.22"
sqlx.workspace = true
tempfile = "3"
lazy_static = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
url.workspace = true
